# paper-2027-mem-filter-benchmarks-jsonschema

./: .gitignore  Makefile  README.md  curated_implementations.txt  curated_schemas.txt  dataset_summary.sh  plot_all.py  plot_memory.py  report.sh  result_table.py  schemas.latex  schemas.txt  update_katydid.sh
.github/: list-implementations.sh
.github/workflows/: ci.yml
analytics/: go.mod
analytics/analytics/: compare.go  completed.go  curated.go  filter.go  group.go  impl.go  latex.go  line.go  median_test.go  result.go  schema.go  score.go
analytics/lib/: schema.go
generator/: LICENSE  Makefile  go.mod  go.sum
generator/rand/: rand.go
generator/schemas/: blogpost.go  example_address.go  example_calendar.go  example_devicetype.go  example_geographical_location.go  example_health_record.go  example_job_posting.go  example_movie.go  katydid_conf.go  userprofile.go
generator/std/: filter.go  json.go  keys.go
implementations/ajv/: Dockerfile  Readme.md  main.mjs  package.json  version.sh
implementations/ajv-bun/: Dockerfile  Readme.md
implementations/blaze/: CMakeLists.txt  Dockerfile  Readme.md  main.cc
implementations/boon/: Readme.md
implementations/corvus/: Program.cs  Readme.md
implementations/go-google/: .benchmark-ignore  Readme.md  go.mod  main.go  version.sh
implementations/go-json-schema-spec/: .benchmark-ignore  Readme.md  go.mod  go.sum  main.go  version.sh
implementations/go-jsonschema/: main.go
implementations/rapidjson/: .benchmark-ignore  CMakeLists.txt  Dockerfile  Readme.md  main.cc  version.sh
recorded/: Readme.md
(+266 files in other folders)
